src/test/scala/wacc/wacc_examples/invalid/semanticErr/function/nonInferrable.wacc
begin
	int f(a) is
		return 0 
	end
	int x = call f(1);
	println x
end